SC-1820 : maven-surefire changes