@@ -63,10 +63,9 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M4</version>
                     <configuration>
-                        <includes>
-                            <include>**/*Spec.java</include>
-                            <include>**/*Test.java</include>
-                        </includes>
+                        <argLine>
+                            --illegal-access=warn
+                        </argLine>
                     </configuration>
                 </plugin>
             </plugins>
